# irods_client_globus_connector

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindGlobus.cmake
lib/: CMakeLists.txt
lib/globus_hasher/: CMakeLists.txt
lib/globus_hasher/include/: ADLER32Strategy.hpp  HashStrategy.hpp  Hasher.hpp  MD5Strategy.hpp  SHA1Strategy.hpp  SHA256Strategy.hpp  SHA512Strategy.hpp  checksum.hpp  irods_hasher_factory.hpp
lib/globus_hasher/src/: ADLER32Strategy.cpp  Hasher.cpp  MD5Strategy.cpp  SHA1Strategy.cpp  SHA256Strategy.cpp  SHA512Strategy.cpp  irods_hasher_factory.cpp
lib/gridmap_callout/: CMakeLists.txt  gridmap_iRODS_callout.conf.in
lib/gridmap_callout/src/: gridmap_iRODS_callout.c
lib/irods_dsi/: CMakeLists.txt
lib/irods_dsi/include/: circular_buffer.hpp  lock_and_wait_strategy.hpp
lib/irods_dsi/src/: globus_gridftp_server_iRODS.cpp
lib/irodsmap/: CMakeLists.txt
lib/irodsmap/src/: libirodsmap.c
lib/irodsmap/test/: testirodsmap.c
lib/pid_manager/: CMakeLists.txt
lib/pid_manager/include/: pid_manager.h
lib/pid_manager/src/: pid_manager.c  pid_manager.cpp
lib/pid_manager/test/: pid_manager_test.c  pid_manager_test.cpp
tests/docker/: docker-compose.yml  globus.debian12.Dockerfile  globus.debian13.Dockerfile  globus.el10.Dockerfile  globus.el9.Dockerfile  globus.ubuntu22.Dockerfile  globus.ubuntu24.Dockerfile  irods.ubuntu22.Dockerfile  start.globus.run.tests.el.sh  start.globus.run.tests.ubuntu.sh
