add_library(
	irods_globus_hasher
	OBJECT
	"${CMAKE_CURRENT_SOURCE_DIR}/src/ADLER32Strategy.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/Hasher.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/MD5Strategy.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/SHA1Strategy.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/SHA256Strategy.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/SHA512Strategy.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/src/irods_hasher_factory.cpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/ADLER32Strategy.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/Hasher.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/HashStrategy.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/MD5Strategy.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/SHA1Strategy.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/SHA256Strategy.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/SHA512Strategy.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/checksum.hpp"
	"${CMAKE_CURRENT_SOURCE_DIR}/include/irods_hasher_factory.hpp"
)
objects_link_libraries(
	irods_globus_hasher
	PUBLIC
	irods_common
	PRIVATE
	Globus::gridftp_server
	OpenSSL::Crypto
)
target_include_directories(
	irods_globus_hasher
	PUBLIC
	"$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
)
target_include_directories(
	irods_globus_hasher
	PRIVATE
	${IRODS_EXTERNALS_FULLPATH_BOOST}/include
)
target_compile_definitions(
	irods_globus_hasher
	PRIVATE
	${IRODS_COMPILE_DEFINITIONS}
	${IRODS_COMPILE_DEFINITIONS_PRIVATE}
	OPENSSL_API_COMPAT=10100
)
set_target_properties(
	irods_globus_hasher
	PROPERTIES
	INTERFACE_POSITION_INDEPENDENT_CODE TRUE
	POSITION_INDEPENDENT_CODE TRUE
)
